--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,20 +7,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="15dp"
-        android:background="@color/colorPrimary">
+        android:padding="15dp">
 
-        <FrameLayout
+        <LinearLayout
+            android:id="@+id/navigation_recycler"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="aaaaaaaaaaaaaaaaa" />
-
-        </FrameLayout>
+            android:layout_height="wrap_content" >
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
